<resources>
    <string name="app_name">Home Stock</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menutitle_addArticle">Add Article</string>
    <string name="menumain_viewArticleStock">View Article Stock</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About this app</string>
    <string name="menumain_generate">Generate Data</string>
    <string name="no_article_selected">No article selected</string>
    <string name="edit_description_button">Button to edit the article description.</string>
    <string name="delete_button_description">Delete the article description</string>
    <string name="ali_delete_article">Delete article from database</string>
    <string name="addedit_name">Article name</string>
    <string name="addedit_description">Article description</string>
    <string name="addedit_sortorder">Sort order</string>
    <string name="addedit_save">Save article</string>
    <string name="addedit_name_hint">Article name: required</string>
    <string name="addedit_description_hint">Description of article: optional</string>
    <string name="addedit_sortorder_hint">Sort order: sorts low to high</string>
    <string name="addedit_save_text">Save article</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_header">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to add new articles\n\nArticles with lower sort order will be placed higher up the list. Articles with the same sort order will be sorted alphabetically\n\nEach article has Edit and Delete buttons if u want to change or remove articles</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting wil also delete all data associated with article id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do u want to discard your changes, or do you want to continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Continue editing</string>
    <string name="cancelEditDiag_negative_caption">Discard changes</string>
    <string name="about_copyright">Copyright © 2020 Clyde Hogenstijn</string>
    <string name="about_weblink">Developers website </string>
    <string name="about_url"><u>www.clyderandomhoge.nl</u></string>
    <string name="about_weblink_21">Developers website www.clyderandomhoge.nl</string>
    <string name="about_email">For support email at clyderandom@email.com</string>
    <string name="about_credits">Icon derived from <b>warehouse- 15</b> at www.openclipart.org by <b>PublicDomainSymbols</b></string>
    <string name="about_code">Code used originally by <b>Tim Buchalka</b>, copyright © 2017 <b>www.LearnProgramming.academy</b></string>
</resources>
