<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.clydehoge.homestock.MainActivity">
    <item
        android:id="@+id/menumain_addArticle"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/menutitle_addArticle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_viewArticleStock"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="101"
        android:title="@string/menumain_viewArticleStock"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_settings"
        android:orderInCategory="102"
        android:title="@string/menumain_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="103"
        android:title="@string/menumain_showAbout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_generate"
        android:orderInCategory="104"
        android:title="@string/menumain_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>
